src/objects/AM_Asset__c.object
<CustomObject>
    <fields>
        <fullName>AM_Available_From__c</fullName>
        <description>This field shows Date value from Asset is available</description>
        <inlineHelpText>This field shows Date value from Asset is available</inlineHelpText>
        <label>Available From</label>
        <summarizedField>AM_Asset_Allocation__c.AM_End_Date__c</summarizedField>
        <summaryForeignKey>AM_Asset_Allocation__c.AM_Asset__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AM_Available_for_allocation__c</fullName>
        <description>This Field shows availability of Assets</description>
        <formula>AND( OR(ISNULL( AM_Available_From__c ) , 
    AND(NOT ISNULL( AM_Available_From__c ),
        NOW() &gt; AM_Available_From__c )),  AM_Out_of_Service__c = false)</formula>
        <inlineHelpText>This Field shows availability of Assets</inlineHelpText>
        <label>Available For Allocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AM_Comments__c</fullName>
        <description>This field is for Asset Description</description>
        <inlineHelpText>Enter Asset Description</inlineHelpText>
        <label>Item Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AM_ID__c</fullName>
        <description>External ID for the asset</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID for the asset</inlineHelpText>
        <label>Model No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is for Location Lookup</description>
        <inlineHelpText>This field is for Location Lookup</inlineHelpText>
        <label>Location</label>
        <referenceTo>AM_Location__c</referenceTo>
        <relationshipLabel>Agile Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AM_Out_of_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is for Asset status which shows Out Of Service</description>
        <inlineHelpText>This checkbox is for Asset status which shows Out Of Service</inlineHelpText>
        <label>Out of Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AM_Price__c</fullName>
        <description>This field is price</description>
        <inlineHelpText>Enter price</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AM_Status__c</fullName>
        <description>Describes the status of an asset</description>
        <formula>IF( AM_Available_for_allocation__c , &quot;Available&quot;, (IF ( AM_Out_of_Service__c ,&quot;Out Of Service&quot;,&quot;Assigned&quot;)))</formula>
        <inlineHelpText>It shows status of an Asset</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Type__c</fullName>
        <description>This picklist contains value of asset type</description>
        <inlineHelpText>Select type of an Asset</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laptop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Furniture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Items</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chromebook</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approximate_Purchase_Value__c</fullName>
        <description>This is formula field shows approximate purchase value</description>
        <formula>AM_Price__c  *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field calculates Approximate Purchase Value</inlineHelpText>
        <label>Approximate Purchase Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This fields shows Assigned status of Asset</description>
        <label>Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field shows Availability of Assets</description>
        <inlineHelpText>This field shows Availability of Assets</inlineHelpText>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <description>This field is for Asset name</description>
        <inlineHelpText>Enter Asset Name</inlineHelpText>
        <label>Item Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OOSTest_Available__c</fullName>
        <formula>OR( ISNULL( AM_Available_From__c ),
  AND(NOT  ISNULL( AM_Available_From__c ),
   NOW() &gt; AM_Available_From__c  ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OOSTest_Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <description>This field is for Purchase Date of Asset</description>
        <inlineHelpText>Enter Date of purchase</inlineHelpText>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>This field shows quantity of the asset items</description>
        <inlineHelpText>Enter Quantity of Asset</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <description>This field shows Total cost</description>
        <formula>Approximate_Purchase_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It calculates Total cost based on quantity</inlineHelpText>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <description>This field shows vendor name</description>
        <inlineHelpText>Enter Vendor Name</inlineHelpText>
        <label>Vendor</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendors__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field id for vendor information</description>
        <inlineHelpText>Select Vendor name</inlineHelpText>
        <label>Vendors</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>New Asset</label>
    <listViews>
        <fullName>All_Assets</fullName>
        <columns>NAME</columns>
        <columns>Item_Name__c</columns>
        <columns>Purchase_Date__c</columns>
        <columns>AM_Type__c</columns>
        <columns>AM_Available_for_allocation__c</columns>
        <columns>AM_Out_of_Service__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Asset Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agile Assets</pluralLabel>
    <recordTypes>
        <fullName>IT</fullName>
        <active>true</active>
        <description>Record Type for IT Iteams</description>
        <label>IT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Infrastructure</fullName>
        <active>true</active>
        <description>Record Type for a Infrastructure</description>
        <label>Infrastructure</label>
    </recordTypes>
    <recordTypes>
        <fullName>Stationary</fullName>
        <active>true</active>
        <description>Record Type for Stationary Iteams</description>
        <label>Stationary</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>